# bitpacking-plus

./: Cargo.toml  README.md
src/: convert.rs  lib.rs  tests.rs
